--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "firebase": "^11.1.0",
-    "mongodb": "^6.15.0"
-  },
   "name": "app-achieveit",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "firebase": "^11.1.0",
+    "mongodb": "^6.15.0"
+  }
 }
