--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "app-achieveit",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "BeeMazing backend service",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "firebase": "^11.1.0",
-    "mongodb": "^6.15.0"
+    "mongodb": "^6.5.0"
   }
 }
